# vcs

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ssl_cert_location.h.in
VCS/: audio_stream.cpp  audio_stream.hpp  main.cpp  voice_interface.cpp  voice_interface.hpp
VCS.xcodeproj/: project.pbxproj
VCS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
VCS.xcodeproj/xcuserdata/jonworms.xcuserdatad/xcschemes/: VCS.xcscheme  xcschememanagement.plist
include/: client.hpp  interface.hpp  ring_buffer.hpp  server.hpp  ssl.hpp
lib/audio/: CMakeLists.txt
lib/audio/include/: audio.hpp  audio_exception.hpp  device.hpp  file.hpp  formats.hpp  input_stream.hpp  output_stream.hpp  stream.hpp
lib/audio/src/: device.cpp  file.cpp  input_stream.cpp  output_stream.cpp  stream.cpp
lib/stt/: CMakeLists.txt  stt.hpp.in  stt_config.hpp.in
lib/stt/include/: engine.hpp  hotword_listener.hpp  hotword_parser.hpp  language_model.hpp  stt.hpp  stt_exception.hpp
lib/stt/src/: engine.cpp  hotword_listener.cpp  hotword_parser.cpp  language_model.cpp
node/: CMakeLists.txt
node/lib/audio/: CMakeLists.txt
node/lib/audio/include/: audio.h  audio.hpp  audio_exception.hpp  device.hpp  file.hpp  formats.hpp  input_stream.hpp  output_stream.hpp  stream.hpp
node/lib/audio/src/: device.cpp  file.cpp  input_stream.cpp  output_stream.cpp  stream.cpp
node/resources/: VCS Client Main.graffle
node/src/: main.c  main.cpp
old/: Makefile
old/VCS/: audio_stream.hpp  main.cpp  voice_interface.cpp  voice_interface.hpp
resources/: VCS Client Main.graffle
src/: client.cpp  interface.cpp  main.cpp  ring_buffer.cpp  server.cpp  ssl.cpp
